[package]
name = "serving-cake"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
dashmap = "5.5.3"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
